# Delaunay-Triangulation

./: .gitignore  CMakeLists.txt  README.md
data/: index.txt  input.txt  input10.txt  input2.txt  inputUniform100.txt  inputUniform20.txt  inputUniform30.txt  inputUniform50.txt
src/: findPaths.cu  generate_points.py  helper_cuda.cu  main.cu  mesh.cu  parDeTri.cu  point.cu  projection.cu  render_svg.py  sort_array.cu  tools.cu  triangulation.cu
